[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.2.1",
    "numpy>=2.4.1",
    "openai>=2.14.0",
    "openai-agents>=0.6.6",
    "pydantic-ai>=1.39.0",
    "streamlit",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "watchdog>=6.0.0",
]
